; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_load_index_extensions.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_load_index_extensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.load_index_extensions = type { i64, i32, i64, i32 }

@the_hash_algo = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"index file corrupt\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @load_index_extensions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @load_index_extensions(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.load_index_extensions*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.load_index_extensions*
  store %struct.load_index_extensions* %7, %struct.load_index_extensions** %3, align 8
  %8 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %9 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %4, align 8
  br label %11

11:                                               ; preds = %59, %1
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %14 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @the_hash_algo, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = sub nsw i32 %15, %18
  %20 = sub nsw i32 %19, 8
  %21 = sext i32 %20 to i64
  %22 = icmp ule i64 %12, %21
  br i1 %22, label %23, label %65

23:                                               ; preds = %11
  %24 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %25 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %4, align 8
  %28 = add i64 %26, %27
  %29 = add i64 %28, 4
  %30 = call i64 @get_be32(i64 %29)
  store i64 %30, i64* %5, align 8
  %31 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %32 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %31, i32 0, i32 3
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %35 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %34, i32 0, i32 2
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* %4, align 8
  %38 = add i64 %36, %37
  %39 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %40 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %39, i32 0, i32 2
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* %4, align 8
  %43 = add i64 %41, %42
  %44 = add i64 %43, 8
  %45 = load i64, i64* %5, align 8
  %46 = call i64 @read_index_extension(i32 %33, i64 %38, i64 %44, i64 %45)
  %47 = icmp slt i64 %46, 0
  br i1 %47, label %48, label %59

48:                                               ; preds = %23
  %49 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %50 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %49, i32 0, i32 2
  %51 = load i64, i64* %50, align 8
  %52 = inttoptr i64 %51 to i8*
  %53 = load %struct.load_index_extensions*, %struct.load_index_extensions** %3, align 8
  %54 = getelementptr inbounds %struct.load_index_extensions, %struct.load_index_extensions* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 8
  %56 = call i32 @munmap(i8* %52, i32 %55)
  %57 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %58 = call i32 @die(i32 %57)
  br label %59

59:                                               ; preds = %48, %23
  %60 = load i64, i64* %4, align 8
  %61 = add i64 %60, 8
  store i64 %61, i64* %4, align 8
  %62 = load i64, i64* %5, align 8
  %63 = load i64, i64* %4, align 8
  %64 = add i64 %63, %62
  store i64 %64, i64* %4, align 8
  br label %11

65:                                               ; preds = %11
  ret i8* null
}

declare dso_local i64 @get_be32(i64) #1

declare dso_local i64 @read_index_extension(i32, i64, i64, i64) #1

declare dso_local i32 @munmap(i8*, i32) #1

declare dso_local i32 @die(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
